[gd_scene load_steps=9 format=3 uid="uid://ge4joff5iiay"]

[ext_resource type="Script" uid="uid://cxlb81renqd77" path="res://scripts/gdscript/input/InputManager.gd" id="1_wxh3k"]
[ext_resource type="AudioStream" uid="uid://rtsim2wwi7k4" path="res://assets/sound/ui/ui_invalid_click.mp3" id="2_ft4ow"]
[ext_resource type="Script" uid="uid://dbvj0c3rblfat" path="res://scripts/gdscript/input/TargetIndicator.gd" id="3_ow0l6"]
[ext_resource type="Script" uid="uid://612v6tv0huco" path="res://scripts/gdscript/input/orbital_particle_effect.gd" id="4_e1qjk"]
[ext_resource type="Script" uid="uid://l0x0u7v0xl1y" path="res://scripts/gdscript/input/terrain_scanner_effect.gd" id="6_qvdb7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wxh3k"]
transparency = 1
albedo_color = Color(0.41568628, 1, 1, 0.78431374)
emission = Color(0.41568628, 1, 1, 1)
emission_operator = 1

[sub_resource type="SphereMesh" id="SphereMesh_wxh3k"]
material = SubResource("StandardMaterial3D_wxh3k")

[sub_resource type="PlaneMesh" id="PlaneMesh_ow0l6"]

[node name="InputManager" type="Node3D" node_paths=PackedStringArray("error_sound")]
script = ExtResource("1_wxh3k")
error_sound = NodePath("ASP")

[node name="WidgetCursor" type="Control" parent="."]
modulate = Color(1.0184411, 1.0184411, 0.51967657, 1)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 110.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WidgetCursor"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="WidgetCursor/VBoxContainer"]
layout_mode = 2
text = "Player Active`s:"

[node name="P-actives" type="Label" parent="WidgetCursor/VBoxContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeshTrigger" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_wxh3k")

[node name="ASP" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ft4ow")
volume_db = -8.0
pitch_scale = 0.8
mix_target = 1

[node name="TargetIndicator" type="Node3D" parent="."]
script = ExtResource("3_ow0l6")

[node name="GroundDecal" type="MeshInstance3D" parent="TargetIndicator"]
mesh = SubResource("PlaneMesh_ow0l6")

[node name="OrbitalParticleEffect" type="Node3D" parent="."]
script = ExtResource("4_e1qjk")
effect_enabled = false
orbit_speed = 0.44
visual_style = 3

[node name="TerrainScannerEffect" type="Node3D" parent="."]
script = ExtResource("6_qvdb7")
max_radius = 30.0
expansion_speed = 5.0
scan_height = -1.0
loop_delay = 1.0
primary_color = Color(0, 0.9000001, 1, 0.39215687)
secondary_color = Color(0, 0.5066668, 0.8, 0.21568628)
